0.32.8 final version